# yandex_tracker_analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  ruff.toml
MVP/: .env  README.md  comprehensive_tracker_analyzer.py  requirements.txt  Про разработку.md  Финал_ТЗ_для_создания_сводных_таблиц_Трекера.docx  Финал_ТЗ_для_создания_сводных_таблиц_Трекера.txt
src/: container.py  settings.py
src/adapters/primary/web/: __init__.py  dependencies.py  router.py  schemas.py
src/adapters/secondary/excel_export/: __init__.py  adapter.py
src/adapters/secondary/tracker_api/: __init__.py  adapter.py
src/adapters/secondary/user_settings/: __init__.py  adapter.py
src/core/application/ports/: __init__.py  export_port.py  tracker_port.py
src/core/application/use_cases/: __init__.py  generate_report.py
src/core/domain/models/: __init__.py  report.py  task.py  task_status.py
src/core/domain/services/: __init__.py  pivot_builder.py  status_analyzer.py
src/entrypoints/: run.py
